--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Motiv8</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header>
-        <h1>Motiv8</h1>
-    </header>
     
+    <div class="container">
+        <h1 class="heading">Motiv8</h1>
+        <h2 class="quote">
+            <i class="fa-solid fa-quote-left"></i>
+            <span id="quote">Quote</span>
+            <i class="fa-solid fa-quote-right"></i>
+        </h2>
+
+        <p class="author" id="author">~ Author</p>
+
+        <button class="btn" id="btn">Get a quote</button>
+
+    </div>
+
+
+
     
     <script src="./JS/index.js"></script>
 </body>
